<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:text="@string/connect"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/autoConnect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:text="@string/autoConnect"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/scanDevices_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:text="@string/scanDevices"
            android:textColor="#FFFFFF" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FFFFFF" />

        <Button
            android:id="@+id/hr_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:text="@string/hr"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/ecg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:text="@string/ecg"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/acc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:text="@string/acc"
            android:textColor="#FFFFFF" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF" />

        <Button
            android:id="@+id/connectTreadmill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

    </LinearLayout>
</ScrollView>